<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="action_settings">Opciones</string>
    <string name="comotellamas">¿Cómo te llamas?</string>
    <string name="cuantopesas">¿Cuánto pesas (kilos)?</string>
    <string name="cualestualtura">¿Cuál es tu altura (cm)?</string>
    <string name="calcular">Calcular</string>
    <string name="resultadosimc">Resultados IMC</string>
    <string name="resultado">Resultado</string>
    <string name="bajopeso">Bajo peso</string>
    <string name="muybajopeso">Muy bajo peso</string>
    <string name="pesonormal">Peso normal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidad1">Obesidad nivel 1</string>
    <string name="obesidad2">Obesidad nivel 2</string>
    <string name="obesidad3">Obesidad nivel 3</string>
</resources>
