<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_gravity="right"
            android:background="#d2d2d2"
            android:translationZ="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/resultadosimc"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/resultado"
                android:id="@+id/tv_resultadodescripcion"
                android:layout_gravity="right|bottom" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:id="@+id/et_resultadovalor"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:hint="@string/resultado"
                android:textAlignment="center"
                android:textStyle="bold"
                android:translationZ="2dp" />
        </FrameLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/comotellamas"
                    android:id="@+id/textView" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_nombre"
                    android:layout_gravity="center_horizontal" />

                <Space
                    style="espacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cuantopesas"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/et_peso"
                    android:layout_gravity="center_horizontal" />

                <Space
                    style="espacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="20dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/espacio2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cualestualtura"
                    android:id="@+id/textView3" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/et_altura" />

                <Space
                    style="espacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="20dp"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calcular"
                    android:id="@+id/bt_calcular"
                    android:layout_gravity="center_horizontal"
                    android:onClick="calcular" />

                <Space
                    style="espacio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="20dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/space" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
